src/objects/ICB_VisitManagement__c.object
<CustomObject>
    <description>Holds consolidated information regarding concluded visits.</description>
    <fields>
        <fullName>ICB_ExecutedTotalDistance__c</fullName>
        <description>Total distance executed on the visit.</description>
        <label>Executed Total Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICB_ExecutedTotalDuration__c</fullName>
        <description>Total duration of the execute visit. Expressed in minutes.</description>
        <label>Executed Total Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICB_PlannedTotalDistance__c</fullName>
        <description>Total distance planned for the visit.</description>
        <label>Planned Total Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICB_PlannedTotalDuration__c</fullName>
        <description>Total duration for the planned visit. Expressed in minutes.</description>
        <label>Planned Total Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICB_VisitManagementCode__c</fullName>
        <description>Visit management record identifier.</description>
        <displayFormat>VM-{00000000}</displayFormat>
        <label>Visit Management Code</label>
        <type>AutoNumber</type>
    </fields>
    <label>Visit Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>